--- a/src/app/Styles/Profile.css
+++ b/src/app/Styles/Profile.css
@@ -1,7 +1,12 @@
 .container {
-  padding: 20px;
-  max-width: 900px;
+  width: 89%;
   margin: auto;
+  padding: 11px;
+  margin-left: 120px;
+  margin-top: 50px;
+  background-color: whitesmoke;
+  height: calc(100% - 50px);
+  border-radius: 25px;
 }
 
 .profileHeader {
@@ -110,7 +115,7 @@ textarea {
   padding: 10px 20px;
   background-color: #4caf50;
   color: white;
-  margin-top:20px;
+  margin-top: 20px;
   border: none;
   border-radius: 8px;
   font-weight: 600;
