--- a/src/app/Styles/Typepage.css
+++ b/src/app/Styles/Typepage.css
@@ -2,11 +2,14 @@
 .type-container {
     display: flex;
     flex-direction: column;
-    padding: 20px;
-    margin-left: 110px;
-    margin-top: 30px;
+    padding: 11px;
+    margin-left: 120px;
+    margin-top: 50px;
     font-family: 'Segoe UI', sans-serif;
-  }
+    background-color: whitesmoke;
+    height: calc(100% - 50px);
+    border-radius: 25px;
+}
   
   /* Page Title */
   .type-title {
