--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 /* Default body styles */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background: #131D4F;
   color: #333;
   line-height: 1.6;
 }
