--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -41,7 +41,7 @@
 }
 
 .sidebar-link:hover {
-  color: #fff;
+  color: #333;
   background-color: #EFE4D2;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
   transform: translateX(4px);
@@ -87,7 +87,16 @@
   /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4); */
   color: #333;
 }
+.nav-left {
+  display: flex;
+  align-items: center;
+}
 
+.logo {
+  height: 100px; /* control logo size */
+  width: auto;
+  object-fit: contain;
+}
 .nav-links {
   display: flex;
   align-items: center;
@@ -165,4 +174,54 @@
   align-items: center;
   margin-right: 10px;
   margin-left: -165px;
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background: white;
+  padding: 2rem;
+  border-radius: 8px;
+  max-width: 320px;
+  width: 90%;
+  text-align: center;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+}
+
+.modal-buttons {
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.modal-btn {
+  padding: 0.5rem 1.5rem;
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.cancel-btn {
+  background-color: #ccc;
+  color: #333;
+}
+
+.logout-btn {
+  background-color: #d9534f;
+  color: white;
+}
+
+.modal-btn:hover {
+  opacity: 0.9;
 }
