--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -74,7 +74,6 @@
 .topnav {
   height: 50px;
   width: 100%;
-  /* background-color: #4DA8DA;  */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -84,19 +83,21 @@
   top: 0;
   left: 0;
   z-index: 999;
-  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4); */
   color: #333;
 }
+
 .nav-left {
   display: flex;
   align-items: center;
 }
 
 .logo {
-  height: 100px; /* control logo size */
-  width: auto;
-  object-fit: contain;
+  width: 100%;
+  max-width: 120px;
+  height: auto;
 }
+
+
 .nav-links {
   display: flex;
   align-items: center;
@@ -175,13 +176,14 @@
   margin-right: 10px;
   margin-left: -165px;
 }
+
 .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -195,7 +197,7 @@
   max-width: 320px;
   width: 90%;
   text-align: center;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .modal-buttons {
