--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -2,7 +2,6 @@
 .sidebar {
   width: 130px;
   height: 100vh;
-  /* background-color: #131D4F;  */
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -11,7 +10,6 @@
   top: 10px;
   left: 0;
   gap: 12px;
-  /* box-shadow: 2px 0 12px rgba(0, 0, 0, 0.3); */
 }
 
 .sidebar-icon {
@@ -97,14 +95,13 @@
   height: auto;
 }
 
-
 .nav-links {
   display: flex;
   align-items: center;
   gap: 10px;
   font-size: 1rem;
   color: #333;
-  margin-left: -55%;
+  margin-left: -45%;
 }
 
 .name-display {
@@ -128,7 +125,7 @@
 .nav-right {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 5px;
 }
 
 .datetime {
@@ -142,32 +139,79 @@
 
 .datetime .day {
   color: #F39C12;
-  /* Bright amber/orange-yellow for good contrast */
 }
 
 .datetime .date {
   color: #E67E22;
-  /* Medium orange */
 }
 
 .datetime .time {
   color: #1ABC9C;
-  /* Vibrant cyan/teal */
 }
 
-.user-icon {
-  color: #f5f5f5;
-  font-size: 30px;
-  /* background: #4DA8DA; */
-  padding: 6px;
+.social-icons-container {
+  display: flex;
+  align-items: center;
+  margin-right: -40px;
+  gap: 5px;
+}
+
+.nav-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
-  cursor: pointer;
-  transition: background 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  text-decoration: none;
 }
 
-.user-icon:hover {
-  background: #4caf50;
-  color: #4DA8DA;
+.nav-icon:hover {
+  transform: scale(1.1);
+}
+
+.nav-icon svg {
+  color: whitesmoke;
+  font-size: 16px;
+}
+
+.profile-container {
+  position: relative;
+  display: inline-block;
+  margin-left: 10%;
+}
+
+.profile-dropdown {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  color: black;
+  border-radius: 6px;
+  z-index: 1000;
+  width: 130px;
+  padding: 8px 0;
+}
+
+.dropdown-item {
+  display: block;
+  padding: 8px 16px;
+  text-decoration: none;
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  border: none;
+  width: 100%;
+  text-align: left;
+}
+
+.user-photo {
+  object-fit: cover;
+  margin-top: 10px;
+}
+
+.user-initial {
+  font-family: Arial, sans-serif;
 }
 
 .nav-left {
